@@ -52,6 +52,8 @@ class PlotLine
     double getLow ();
     void setLow (double);
     void checkHighLow (double);
+    void setColorBars (bool);
+    bool getColorBars ();
 
   private:
     QList<Val> data;
@@ -60,6 +62,7 @@ class PlotLine
     QString label;
     double high;
     double low;
+    bool colorBars;
 };
 
 #endif
